fix: fixed bug in the extraction of CSS information from the AAS: the relationship between Skill and SkillParameter was not established if they are an Operation and its OperationVariable (since they are not semantically related).
